tests/circuits/invalids/link_output_to_output.nts
.chipsets:
input   a
input   b
.links:
a:1     b:1